[package]
name = "crust"
version = "0.1.0"
authors = ["Axel Kappel"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
bigdecimal = "0.3.0"
bitflags = "1.3.2"
console = "0.15.0"
crossterm = "0.25.0"
ctrlc = "3.2.0"
directories = "4.0.1"
distance = "0.4.0"
executable-finder = { version = "0.3.0", features = ["rayon"] }
glob = "0.3.0"
indexmap = { version = "1.8.1", features = ["serde"] }
memchr = "2.4.1"
miette = { version = "5.3.0", features = ["fancy"] }
num-traits = "0.2.14"
once_cell = "1.14.0"
opener = "0.5.0"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.4"
rayon = "1.5.3"
regex = "1.5.5"
rustyline = "10.0.0"
serde = "1.0.145"
serde_json = "1.0.85"
subprocess = "0.2.8"
textwrap = "0.15.1"
thiserror = "1.0.30"
toml = "0.5.9"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.9"
ureq = { version = "2.4.0", features = ["brotli", "native-certs", "charset"] }
whoami = "1.1.1"
yansi = "0.5.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"
