[package]
name = "crust"
version = "0.1.0"
authors = ["Axel Kappel"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
bigdecimal = "0.4.0"
bitflags = "2.3.3"
comfy-table = "7.0.1"
console = "0.15.0"
crossterm = "0.26.0"
ctrlc = "3.2.0"
directories = "5.0.0"
distance = "0.4.0"
executable-finder = { version = "0.3.0", features = ["rayon"] }
glob = "0.3.0"
humansize = "2.1.3"
indexmap = { version = "2.0.0", features = ["serde"] }
memchr = "2.4.1"
miette = { version = "5.3.0", features = ["fancy"] }
num-traits = "0.2.14"
once_cell = "1.14.0"
opener = "0.6.0"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.4"
rayon = "1.5.3"
regex = "1.5.5"
rustyline = "12.0.0"
serde = "1.0.145"
serde_json = "1.0.85"
subprocess = "0.2.8"
textwrap = "0.16.0"
thiserror = "1.0.30"
toml = "0.8.0"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.9"
ureq = { version = "2.4.0", features = ["brotli", "native-certs", "charset"] }
whoami = "1.1.1"
yansi = "0.5.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
nix = "0.26.1"
